--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,34 @@
 </head>
 <body>
 
-  <header>
-    <h1>Hello World</h1>
+  <header class="header">
+    <h1 >Magic Metrics</h1>
   </header>
+
+
+  <div class="row">
+    <div class="row__medium-6">
+        <div class="wrapper"> 
+          
+            <h2 class="headline">Insert a person name to calculate fancy metrics</h2>
+
+            <form action="/action_page.php" method="get" class="form">
+              <label class="form__label" for="fname">First Name</label>
+              <input class="form__input" type="text" name="fname">
+
+              <label class="form__label" for="lname">Last Name</label>
+              <input class="form__input" type="text" name="lname">
+
+              <input type="submit" value="Submit" class="form__btn">
+            </form>
+        </div>
+    </div>
+
+    <div class="row__medium-6">
+    </div>
+
+</div>
+
 
      
   <!-- build:js assets/scripts/App.js -->
