maybe its time to sleep

--- a/app/index.html
+++ b/app/index.html
@@ -40,13 +40,15 @@
 
 
             <div class="metrics">
-                    <div class="metrics__label" for="ascii">Sum Ascii:</div>
+                    <div class="metrics__label">Sum Ascii:</div>
+                    <div class="metrics metrics--ascii"></div>
 
-                    
-                    <div class="metrics__label" for="binary">Binary:</div>
+                    <div class="metrics__label">Binary:</div>
+                    <div class="metrics metrics--binary"></div>
 
 
-                    <div class="metrics__label" for="zeros">Zeros:</div>
+                    <div class="metrics__label">Zeros:</div>
+                    <div class="metrics metrics--zeros"></div>
 
             </div>
         </div>
